--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,99 @@
+.main {
+    height: 100%;
+    width: 100%;
+    display: table;
+}
+.wrapper {
+    display: table-cell;
+    height: 100%;
+    vertical-align: middle;
+}
 .hidden {
     display: none;
+}
+
+html
+{
+    height: 100%;
+}
+
+h2
+{
+    font-size: 4rem;
+    color: #fff;
+}
+
+h3
+{
+    font-size: 2rem;
+    margin-block: 0.5rem;
+    font-weight: lighter;
+    color: #fff;
+}
+
+input
+{
+    font-size: 1.5rem;
+    border: none;
+    background: transparent;
+    color: #fff;
+}
+
+body
+{
+    margin: 0 auto;
+    text-align: center;
+    height: 100%;
+    width: 40%;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+li
+{
+    font-size: 1.5rem;
+    color: #fff;
+    padding: 4px;
+}
+
+li span
+{
+    font-size: 2rem;
+    font-weight: lighter;
+    color: #fff;
+}
+
+button
+{
+    background-color: transparent;
+    border: 0;
+    font-size: 24px;
+    color: crimson;
 }
 
 img {
     position:absolute;
     top: 0;
     left: 0;
-    size:100%;
+    width:100%;
+    height: 100%;
     z-index: -1;
+}
+
+#weather
+{
+    position:absolute;
+    top: 5px;
+    right: 10px;
+}
+
+#weather span
+{
+    font-size: 1rem;
+    font-weight: lighter;
+    color: #fff;
 }
